<resources>
    <string name="app_name">HimyProject</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="drawerName">Mind</string>
    <string name="card_test">Tests</string>
    <string name="card_artical">Psychopedia</string>
    <string name="card_contest">Consult</string>
    <string name="card_test1">Test 1</string>
    <string name="card_test2">Test 2</string>
    <string name="card_test3">Test 3</string>
    <string name="card_test4">Test 4</string>
    <string name="card_test5">Test 5</string>
    <string name="card_test6">Test 6</string>
    <string name="card_test7">Test 7</string>
    <string name="card_test8">Test 8</string>
    <string name="card_test9">Test 9</string>
    <string name="card_test10">Test 10</string>
    <string name="card_test11">Test 11</string>
    <string name="card_test12">Test 12</string>
    <string name="card_test13">Test 13</string>
    <string name="card_test14">Test 14</string>
    <string name="card_test15">Test 15</string>
    <string name="card_test16">Test 16</string>
    <string name="card_test17">Test 17</string>
    <string name="card_test18">Test 18</string>

    <string name="test_button1">Take Test</string>
    <string name="test_button2">See History</string>
    <string name="card_test_t">Disclaimer</string>
    <string name="card_test_1">

        This test is for adults only, and is not a diagnostic instrument, and is only to be used by you if you are 18 years or older. This application is for information purposes only and is not intended to replace a consultation with your doctor or a mental health professional. Please consult a qualified resource if you believe you may be suffering from a mental health condition.
    </string>
    <string name="taptocontinue">
        Tap "Continue" to start
    </string>
    <string name="test_1">
        Question 1
    </string>
</resources>
