<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    android:id="@+id/drawer"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="288dp"
            android:layout_height="140dp"
            android:id="@+id/card1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="63dp"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="83dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="77dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_test"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="25sp"
                android:onClick="testActive"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="288dp"
            android:layout_height="140dp"
            android:layout_below="@+id/card1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="63dp"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="88dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_artical"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="288dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="528dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="63dp"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_contest"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic"
                />
        </androidx.cardview.widget.CardView>




    </RelativeLayout>
<com.google.android.material.navigation.NavigationView
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation"
    app:menu="@menu/menu_items"
    app:headerLayout="@layout/drawer_header"
    android:background="@color/c1"
    app:itemTextColor="#fff"
    android:layout_gravity="start"
    />

</androidx.drawerlayout.widget.DrawerLayout>